# lab4-threads-2

./: CMakeLists.txt  LICENSE.md  Lab4_Qt20_2026.docx  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/include/: mainwindow.h
app/src/: main.cpp  mainwindow.cpp  mainwindow.ui
libs/workers_core/: CMakeLists.txt
libs/workers_core/include/: mypoint.h  worker.h  workersrunsettings.h
libs/workers_core/src/: mypoint.cpp  worker.cpp
libs/workers_widgets/: CMakeLists.txt
libs/workers_widgets/include/: pointswidget.h
libs/workers_widgets/src/: pointswidget.cpp
tests/: CMakeLists.txt  test_mainwindow.cpp  test_mypoint.cpp  test_pointswidget.cpp  test_worker.cpp
